feat(core): Milestone 6.24